test/resource/invalid/escape2.ftl
<#escape test as {"a"}>${1}</#escape>
